@@ -11,7 +11,7 @@
     </resolution>
     <consumables>
       <comments>
-        <en>cartridge</en>
+        <en>One black ink cartridge including printhead</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism><!--no "url"-->
