@@ -11,7 +11,7 @@
     </resolution>
     <consumables>
       <comments>
-        <en>ink cartridge including printhead</en>
+        <en>One black ink cartridge including printhead</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism>
@@ -25,7 +25,7 @@
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver>
+  <driver>pcl3</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>Works just fine using ghostscript.</en>
