@@ -11,7 +11,7 @@
     </resolution>
     <consumables>
       <comments>
-        <en>cartridge</en>
+        <en>One black ink cartridge including printhead</en>
       </comments>
     <!--one or more "partno" elements.--></consumables>
   </mechanism><!--no "url"-->
@@ -24,7 +24,7 @@
   <autodetect>
   <!--no known parport probe information--></autodetect>
   <functionality>A</functionality>
-  <driver>hpijs</driver>
+  <driver>pcl3</driver>
   <!--no "contrib_url"-->
   <comments>
     <en>Should work fine with various deskjet drivers.</en>
