@@ -1,3 +1,14 @@
+2004-03-02  Till Kamppeter <till.kamppeter@gmx.net>
+
+	* printer/HP-DeskJet_500.xml, printer/HP-DeskJet_510.xml,
+	  printer/HP-DeskJet_520.xml: Switched recommended driver to
+	  "pcl3", there are reports that HPIJS does not work with these
+	  old BW-only DeskJets.
+
+	* printer/HP-DeskJet_500.xml, printer/HP-DeskJet_510.xml,
+	  printer/HP-DeskJet_520.xml, printer/HP-DeskJet.xml: Improved
+	  "Consumables" text.
+
 2004-02-29  Till Kamppeter <till.kamppeter@gmx.net>
 
 	* printer/HP-Color_LaserJet_5M, driver/Postscript.xml,
